# fri-cuda

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
core/: Cargo.toml  build.rs
core/kernels/include/: kb31_4_t.cuh  kb31_t.cuh  launcher.cuh  poseidon2.cuh  poseidon2_consts.cuh
core/kernels/src/: dft.cu  fri.cu  matrix.cu  merkle_tree.cu
core/kernels/supra/: ntt.cu  ntt_bitrev.cu  ntt_params.cu
core/kernels/supra/include/: ntt.cuh  parameters.cuh
core/src/: base.rs  data_transporter.rs  lib.rs  pcs.rs  types.rs
core/src/cuda/: kernels.rs  ntt.rs
core/src/dft/: mod.rs  ntt.rs  ops.rs
core/src/fri/: mod.rs  ops.rs  prover.rs  test.rs  two_adic_pcs.rs
core/src/merkle_tree/: merkle_tree.rs  mmcs.rs  mod.rs
cuda-builder/: Cargo.toml
cuda-builder/src/: lib.rs
cuda-common/: Cargo.toml  build.rs
cuda-common/cuda/src/: vpmm_shim.cu
cuda-common/src/: common.rs  copy.rs  d_buffer.rs  error.rs  stream.rs
cuda-common/src/memory_manager/: cuda.rs  mod.rs  vm_pool.rs
