[package]
name = "cuda-common"
version.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
metrics.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
bytesize.workspace = true
ctor.workspace = true

[build-dependencies]
cuda-builder.workspace = true

[features]
touchemall = []
